--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist =
     {py27,py34,py35,py36}-django-19
     {py27,py34,py35,py36}-django-110
     {py27,py34,py35,py36}-django-111
+    {py35,py36,py37}-django-200
+    {py35,py36,py37}-django-210
 
 [testenv]
 setenv =
@@ -18,7 +20,9 @@ deps =
     django-19: Django>=1.9,<1.10
     django-19: djangorestframework>=3.5.4,<3.6
     django-110: Django>=1.10,<1.11
-    django-111: Django>=1.11.14
+    django-111: Django>=1.11.14,<2.0.0
+    django-200: Django>=2.0.0,<2.1.0
+    django-210: Django>=2.1.0,<2.2.0
     -r{toxinidir}/requirements_test.txt
 basepython =
     py37: python3.7
