--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,44 @@ sudo: false
 matrix:
   include:
     - python: 2.7
+      env:
+        - TOXENV=py27-django-18
+        - TOXENV=py27-django-19
+        - TOXENV=py27-django-110
+        - TOXENV=py27-django-111
+
     - python: 3.4
+      env:
+        - TOXENV=py34-django-18
+        - TOXENV=py34-django-19
+        - TOXENV=py34-django-110
+        - TOXENV=py34-django-111
+
     - python: 3.5
+      env:
+        - TOXENV=py35-django-18
+        - TOXENV=py35-django-19
+        - TOXENV=py35-django-110
+        - TOXENV=py35-django-111
+        - TOXENV=py35-django-200
+        - TOXENV=py35-django-210
+
     - python: 3.6
+      env:
+        - TOXENV=py36-django-18
+        - TOXENV=py36-django-19
+        - TOXENV=py36-django-110
+        - TOXENV=py36-django-111
+        - TOXENV=py36-django-200
+        - TOXENV=py36-django-210
+
     - python: 3.7
       dist: xenial
       sudo: true
+      env:
+        - TOXENV=py37-django-200
+        - TOXENV=py37-django-210
+
 install:
   - pip install tox
 script:
